# ChangeLog for app-dicts/wordnet
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-dicts/wordnet/ChangeLog,v 1.18 2008/12/16 00:48:25 pva Exp $

  16 Dec 2008; Peter Volkov <pva@gentoo.org> -wordnet-3.0.ebuild,
  wordnet-3.0-r2.ebuild:
  Don't clobber MAKEOPTS, bug #250144, thank SpanKY for report. Remove old.

  17 Sep 2008; Markus Meier <maekke@gentoo.org> wordnet-3.0-r2.ebuild:
  x86 stable, bug #211491

*wordnet-3.0-r2 (12 Sep 2008)

  12 Sep 2008; Peter Volkov <pva@gentoo.org>
  -files/wordnet-3.0-CVE-2008-3908.patch, wordnet-3.0.ebuild,
  -wordnet-3.0-r1.ebuild, +wordnet-3.0-r2.ebuild:
  Applying fix for CVE-2008-2149, again bug #211491, thank you Robert
  Buchholz.

*wordnet-3.0-r1 (10 Sep 2008)

  10 Sep 2008; Peter Volkov <pva@gentoo.org>
  -files/Wordnet-2.1-compile-fix-new.patch,
  -files/Wordnet-2.1-dict-location.patch,
  +files/wordnet-3.0-CVE-2008-3908.patch, -files/Makefiles.diff,
  -wordnet-2.0.ebuild, -wordnet-2.1.ebuild, +wordnet-3.0-r1.ebuild:
  Appling fix for security issue, bug #211491, thank Jukka Ruohonen for
  report and Robert Buchholz for pointing to patch. Remove old.

  22 Oct 2007; Dawid Węgliński <cla@gentoo.org> wordnet-3.0.ebuild:
  Stable on x86 (bug #73107)

  05 Aug 2007; Fabian Groffen <grobian@gentoo.org>
  -files/wordnet-2.0-macos.patch, wordnet-2.0.ebuild, wordnet-2.1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*wordnet-3.0 (05 Aug 2007)

  05 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +files/wordnet-3.0-dict-location.patch,
  +files/wordnet-3.0-docs-path.patch, +files/wordnet-3.0-shared-lib.patch,
  +wordnet-3.0.ebuild:
  Version bump as per bug 164022. Largely re-written ebuild which fixes bugs
  130024 as well. Dropped ppc-macos KEYWORD because they don't have tcl/tk
  available and filed bug 187771 about it.

  04 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org> wordnet-2.0.ebuild,
  wordnet-2.1.ebuild: