@@ -4,5 +4,6 @@ AUX wordnet-3.0-shared-lib.patch 921 RMD160 983a16ff89636b5127a88538ebc1d12f5557
 DIST WordNet-3.0.tar.gz 11537227 RMD160 7dc7a7417753004170e6fd4a503b232c028f35ee SHA1 16986e6bf695fc752c201c080333dadd919fe3ed SHA256 b4d8b1feeb22defe686cf1c5062d723bd854997614da9547fa135e5137843531
 DIST wordnet-3.0-patchset-1.tar.bz2 8076 RMD160 09e59e73d3032f747b1e0d80dc3cc5911efcdcc8 SHA1 d692931bc4d51c27dae9adc452bf7b5f10c3368f SHA256 d8333b107f53e188981e9ec0e1e53890c8bd7155924ae140c777c3f443d8aba7
 EBUILD wordnet-3.0-r2.ebuild 2034 RMD160 83509dbf86ea6e5ca285f4961432f4d6c35f21ed SHA1 cabc6401c05921ab09bb44ce835f418231b0a5f1 SHA256 1017d6dcfe6fcf6f8fd089a93f7e5c5222e40c713d115af659b9f88f560bd42c
-MISC ChangeLog 3451 RMD160 5e4ef5e224137273f54ad425609078f7cdfde87b SHA1 b902a80a1ec14ed72ffc12affe2a8e53ab607092 SHA256 5cac782fe87197854377af5cf89b44035397bac6a8ae3d2c7a85ebe1448cfd99
+EBUILD wordnet-3.0-r3.ebuild 2194 RMD160 cf5b50280ab697d20c6c05ae8cc0a79d45873dbb SHA1 5515f4c85088496b1a0d51c031ecc4f25897b5ec SHA256 b8f689c619d5a11d29bb8af840b570a3ad1aaaf0e17a619728c94779fb6c9e50
+MISC ChangeLog 3639 RMD160 6918a033fa3a9ab422df53ccbb6ee8dd98d48df1 SHA1 c8eebb6fc8cc91ab411596d3bd361fd7b78e2469 SHA256 7d53ced90c6098ca3b2795472229cfc9ef39ad0f479b857a8be68cd2f0d7a201
 MISC metadata.xml 162 RMD160 853d3c463af1132de9d434e4bdca16fd81a21eb0 SHA1 0d9e341c4b61e23adc1f3806989a0236b83257a0 SHA256 9629e7723cb4708c1910c25510cd14da2729d34eed4ebfc1563df4a1ed5e1b22
