@@ -1,6 +1,12 @@
 # ChangeLog for app-dicts/wordnet
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/wordnet/ChangeLog,v 1.18 2008/12/16 00:48:25 pva Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/wordnet/ChangeLog,v 1.19 2009/03/15 11:45:29 pva Exp $
+
+*wordnet-3.0-r3 (15 Mar 2009)
+
+  15 Mar 2009; Peter Volkov <pva@gentoo.org> +wordnet-3.0-r3.ebuild:
+  Drop installation of OLD tk.h headers, bug #255590, thank Nathan Brink for
+  report.
 
   16 Dec 2008; Peter Volkov <pva@gentoo.org> -wordnet-3.0.ebuild,
   wordnet-3.0-r2.ebuild:
